--- a/newtab.html
+++ b/newtab.html
@@ -1,5 +1,12 @@
 <html>
 <head>
+	<!-- jQuery -->
+	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment.min.js" crossorigin="anonymous"></script>
+
+	<script src="js/main.js" type="text/javascript"></script>
+
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -12,15 +19,14 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
 </head>
 <body>
-	<div class="centered_box">
-		<div class="time" style="display: none;"></div>
+	<div class="centered_box" style="display: none;">
+		<div class="inner">
+			<div class="time"></div>
+			<div class="welcome_box">
+				Welcome 
+				<span class="name"></span>
+			</div>
+		</div>
 	</div>
-
-	<!-- jQuery -->
-	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment.min.js" crossorigin="anonymous"></script>
-
-	<script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
