Added better styling for the name

--- a/newtab.html
+++ b/newtab.html
@@ -24,7 +24,7 @@
 			<div class="time"></div>
 			<div class="welcome_box">
 				Welcome 
-				<span class="name"></span>
+				<span class="name selectabale"></span>
 			</div>
 		</div>
 	</div>
