--- a/newtab.html
+++ b/newtab.html
@@ -19,6 +19,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
 </head>
 <body>
+	<div class="wallpaper" style="display: none;"></div>
 	<div class="centered_box" style="display: none;">
 		<div class="inner">
 			<div class="time"></div>
