Added Good X instead of welcome

--- a/newtab.html
+++ b/newtab.html
@@ -25,7 +25,7 @@
 		<div class="inner">
 			<div class="time"></div>
 			<div class="welcome_box">
-				Welcome 
+				<span class="welcome_text"></span> 
 				<span class="name selectabale"></span>
 			</div>
 		</div>
