Add support for inline editing of name

--- a/newtab.html
+++ b/newtab.html
@@ -26,7 +26,7 @@
 			<div class="time"></div>
 			<div class="welcome_box">
 				<span class="welcome_text"></span> 
-				<span class="name selectabale"></span>
+				<span contentEditable class="name selectabale"></span>
 			</div>
 		</div>
 	</div>
