Allow storing notes. Still imperfect; breaks with HTML tags and new lines don't work

--- a/newtab.html
+++ b/newtab.html
@@ -26,9 +26,12 @@
 			<div class="time"></div>
 			<div class="welcome_box">
 				<span class="welcome_text"></span> 
-				<span contentEditable class="name selectabale"></span>
+				<span contentEditable data-content-type="name" class="name selectabale"></span>
 			</div>
 		</div>
+	</div>
+	<div contentEditable data-content-type="notes" class="notes">
+		test
 	</div>
 </body>
 </html>
