Made notes section transparent unless hovering

--- a/newtab.html
+++ b/newtab.html
@@ -30,8 +30,10 @@
 			</div>
 		</div>
 	</div>
-	<div contentEditable data-content-type="notes" class="notes">
-		test
+	<div class="widget_outer bottom_right">
+		<div contentEditable data-content-type="notes" class="notes">
+			test
+		</div>
 	</div>
 </body>
 </html>
