Bugfix for selectable text not working

--- a/newtab.html
+++ b/newtab.html
@@ -26,16 +26,14 @@
 			<div class="time"></div>
 			<div class="welcome_box">
 				<span class="welcome_text"></span> 
-				&#8203;<span contentEditable data-content-type="name" class="name selectabale"></span>&#8203;
+				<span contentEditable data-content-type="name" class="name selectabale"></span>
 			</div>
 		</div>
 	</div>
 	<div class="widget_outer bottom_right">
-		&#8203;
 		<div contentEditable data-content-type="notes" class="notes">
 			test
 		</div>
-		&#8203;
 	</div>
 </body>
 </html>
