Typo fixes, CSS changes

--- a/newtab.html
+++ b/newtab.html
@@ -30,7 +30,7 @@
 			<div class="time"></div>
 			<div class="welcome_box">
 				<span class="welcome_text"></span> 
-				<span contentEditable data-content-type="name" class="name selectabale"></span>
+				<span contentEditable data-content-type="name" class="name selectable"></span>
 			</div>
 		</div>
 	</div>
@@ -39,11 +39,11 @@
 			<img class="weather_icon" src=""/>
 			<div class="weather_high"></div>
 			<div class="weather_low"></div>
-			<div class="weather_location_container"><span contentEditable data-content-type="weather_location" class="weather_location selectabale"></span></div>
+			<div class="weather_location_container"><span contentEditable data-content-type="weather_location" class="weather_location selectable"></span></div>
 		</div>
 	</div>
 	<div class="widget_outer bottom_right">
-		<div contentEditable data-content-type="notes" class="notes">
+		<div contentEditable data-content-type="notes" class="notes selectable">
 			
 		</div>
 	</div>
