--- a/newtab.html
+++ b/newtab.html
@@ -9,16 +9,11 @@
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.simpleWeather/3.1.0/jquery.simpleWeather.min.js"></script>
 
+	<link rel="stylesheet" type="text/css" href="
+	https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" media="screen" />
+
 	<script src="js/main.js" type="text/javascript"></script>
-
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<script src="lib/iconwc.js" type="text/javascript"></script>
 
 	<link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -36,11 +31,16 @@
 	</div>
 	<div class="widget_outer top_right">
 		<div class="weather">
-			<img class="weather_icon" src=""/>
-			<div class="weather_high"></div>
-			<div class="weather_low"></div>
+			<div class="weather_top">
+				<img class="weather_icon" src=""/>
+				<div class="weather_high"></div>
+				<div class="weather_low"></div>
+			</div>
 			<div class="weather_location_container"><span contentEditable data-content-type="weather_location" class="weather_location selectable"></span></div>
 		</div>
+	</div>
+	<div class="widget_outer bottom_left">
+		<svg-icon><src href="/icons/sprite.svg#si-glyph-gear" /></svg-icon>
 	</div>
 	<div class="widget_outer bottom_right">
 		<div contentEditable data-content-type="notes" class="notes selectable">
