--- a/newtab.html
+++ b/newtab.html
@@ -7,8 +7,6 @@
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment.min.js" crossorigin="anonymous"></script>
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.simpleWeather/3.1.0/jquery.simpleWeather.min.js"></script>
-
 	<link rel="stylesheet" type="text/css" href="
 	https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" media="screen" />
 
@@ -16,7 +14,8 @@
 	<script src="lib/iconwc.js" type="text/javascript"></script>
 
 	<link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
-	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/weathericons.css" media="screen" />
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 </head>
 <body>
 	<div class="wallpaper" style="display: none;">
@@ -34,7 +33,7 @@
 	<div class="widget_outer top_right">
 		<div class="weather">
 			<div class="weather_top">
-				<img class="weather_icon svg-icon" src=""/>
+				<i class="weather_icon svg-icon wi"></i>
 				<div class="weather_high"></div>
 				<div class="weather_low"></div>
 			</div>
@@ -43,30 +42,48 @@
 	</div>
 	<div class="widget_outer bottom_left">
 		<div class="prefs_panel" style="display: none;">
-			<h1>Preferences</h1>
-			<div class="prefs_row">
-				<div class="label">Custom Image</div>
-				<div class="field">
-					<div contentEditable data-content-type="custom_image" class="custom_image_field"></div>
+			<div class="triangle"></div>
+			<div class="prefs_panel_inner">
+				<h1>Preferences</h1>
+				<div class="reset_wallpaper_container">
+					<button class="reset_wallpaper_button">Reset back to Daily Wallpaper</button>
 				</div>
-			</div>
-			<div class="prefs_row">
-				<div class="label">Name</div>
-				<div class="field">
-					<div contentEditable data-content-type="name" class="name selectable"></div>
+				<div class="clear"></div>
+				<div class="wallpaper_thumbs">
+
 				</div>
-			</div>
-			<div class="prefs_row">
-				<div class="label">Location</div>
-				<div class="field">
-					<div contentEditable data-content-type="weather_location" class="weather_location selectable"></div>
+				<div class="prefs_row_container">
+					<div class="prefs_row">
+						<div class="label">Custom Image</div>
+						<div class="field">
+							<input type="text" data-content-type="custom_image" class="custom_image_field selectable" value=""/>
+						</div>
+					</div>
+					<div class="prefs_row">
+						<div class="label">Blur Background?</div>
+						<div class="field">
+							<input type="checkbox" data-content-type="blur" class="blur"/>
+						</div>
+					</div>
+					<div class="prefs_row">
+						<div class="label">Name</div>
+						<div class="field">
+							<div contentEditable data-content-type="name" class="name selectable"></div>
+						</div>
+					</div>
+					<div class="prefs_row">
+						<div class="label">Location</div>
+						<div class="field">
+							<div contentEditable data-content-type="weather_location" class="weather_location selectable"></div>
+						</div>
+					</div>
+					<div class="prefs_row" style="margin-top: 20px;">
+						<button class="reset_settings">Reset All Settings</button>
+					</div>
 				</div>
-			</div>
-			<div class="prefs_row">
-				<div class="label">Blur Background?</div>
-				<div class="field">
-					<input type="checkbox" data-content-type="blur" class="blur"/>
-				</div>
+				<h1>Credits</h1>
+				<div class="clear"></div>
+				<p>Extension created by <a href="http://skoshy.com?ref=minimalite" target="_blank">Stefan Koshy</a></p>
 			</div>
 		</div>
 		<svg-icon class="prefs_button"><src href="/icons/sprite.svg#si-glyph-gear" /></svg-icon>
