Add more credits

--- a/newtab.html
+++ b/newtab.html
@@ -84,6 +84,8 @@
 				<h1>Credits</h1>
 				<div class="clear"></div>
 				<p>Extension created by <a href="http://skoshy.com?ref=minimalite" target="_blank">Stefan Koshy</a></p>
+				<p>Wallpapers from <a href="http://unsplash.com" target="_blank">Unsplash</a></p>
+				<p>Weather data from <a href="http://openweathermap.org" target="_blank">Open Weather Map</a></p>
 			</div>
 		</div>
 		<svg-icon class="prefs_button"><src href="/icons/sprite.svg#si-glyph-gear" /></svg-icon>
