Implemented celsius option

--- a/newtab.html
+++ b/newtab.html
@@ -77,6 +77,12 @@
 							<div contentEditable data-content-type="weather_location" class="weather_location selectable"></div>
 						</div>
 					</div>
+					<div class="prefs_row">
+						<div class="label">Use Celsius?</div>
+						<div class="field">
+							<input type="checkbox" data-content-type="celsius" class="celsius"/>
+						</div>
+					</div>
 					<div class="prefs_row" style="margin-top: 20px;">
 						<button class="reset_settings">Reset All Settings</button>
 					</div>
