Add dimming by default

--- a/newtab.html
+++ b/newtab.html
@@ -66,6 +66,12 @@
 						</div>
 					</div>
 					<div class="prefs_row">
+						<div class="label">Dim Background?</div>
+						<div class="field">
+							<input type="checkbox" data-content-type="dim" class="dim"/>
+						</div>
+					</div>
+					<div class="prefs_row">
 						<div class="label">Name</div>
 						<div class="field">
 							<div contentEditable data-content-type="name" class="name selectable"></div>
