Transition to strict javascript. Clean up code a bit. Implemented beginnings for editing bookmarks

--- a/newtab.html
+++ b/newtab.html
@@ -31,7 +31,13 @@
 		</div>
 	</div>
 	<div class="widget_outer dimmed top_left">
-		<div class="bookmarks"></div>
+		<div class="bookmarks">
+			<div class="bookmarks_editor">
+				<input type="text" class="bookmark_name" placeholder="Name (Google)"/>
+				<input type="text" class="bookmark_link" placeholder="URL (http://google.com)"/>
+				<input type="text" class="bookmark_color" placeholder="Color"/>
+			</div>
+		</div>
 	</div>
 	<div class="widget_outer dimmed top_right">
 		<div class="weather">
