--- a/newtab.html
+++ b/newtab.html
@@ -12,6 +12,7 @@
 
 	<script src="js/main.js" type="text/javascript"></script>
 	<script src="lib/iconwc.js" type="text/javascript"></script>
+	<script src="lib/jqColorPicker.min.js" type="text/javascript"></script>
 
 	<link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="css/weathericons.css" media="screen" />
@@ -35,7 +36,11 @@
 			<div class="bookmarks_editor">
 				<input type="text" class="bookmark_name" placeholder="Name (Google)"/>
 				<input type="text" class="bookmark_link" placeholder="URL (http://google.com)"/>
-				<input type="text" class="bookmark_color" placeholder="Color"/>
+				<input type="text" class="bookmark_color" placeholder="Color" readonly/>
+				<div class="buttons_container">
+					<button class="bookmarks_button_save">Save</button>
+					<button class="bookmarks_button_cancel">Cancel</button>
+				</div>
 			</div>
 		</div>
 	</div>
