Added drag/drop support for bookmarks

--- a/newtab.html
+++ b/newtab.html
@@ -33,6 +33,9 @@
 	</div>
 	<div class="widget_outer dimmed top_left">
 		<div class="bookmarks">
+			<div class="icons-container">
+
+			</div>
 			<div class="bookmarks_editor">
 				<input type="text" class="bookmark_name" placeholder="Name (Google)"/>
 				<input type="text" class="bookmark_link" placeholder="URL (http://google.com)"/>
@@ -90,6 +93,12 @@
 							</div>
 						</div>
 						<div class="prefs_row">
+							<div class="label">Dim Corners?</div>
+							<div class="field">
+								<input type="checkbox" data-content-type="dim_corners" class="dim_corners"/>
+							</div>
+						</div>
+						<div class="prefs_row">
 							<div class="label">Name</div>
 							<div class="field">
 								<div contentEditable data-content-type="name" class="name selectable"></div>
@@ -105,12 +114,6 @@
 							<div class="label">Use Celsius?</div>
 							<div class="field">
 								<input type="checkbox" data-content-type="celsius" class="celsius"/>
-							</div>
-						</div>
-						<div class="prefs_row">
-							<div class="label">Dim Corners?</div>
-							<div class="field">
-								<input type="checkbox" data-content-type="dim_corners" class="dim_corners"/>
 							</div>
 						</div>
 						<div class="prefs_row" style="margin-top: 20px;">
