Segment files out

--- a/newtab.html
+++ b/newtab.html
@@ -10,6 +10,8 @@
 	<link rel="stylesheet" type="text/css" href="
 	https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" media="screen" />
 
+	<script src="js/static.js" type="text/javascript"></script>
+	<script src="js/utils.js" type="text/javascript"></script>
 	<script src="js/main.js" type="text/javascript"></script>
 	<script src="lib/iconwc.js" type="text/javascript"></script>
 	<script src="lib/jqColorPicker.min.js" type="text/javascript"></script>
@@ -142,6 +144,7 @@
 					<p>Extension created by <a href="http://skoshy.com?ref=minimalite" target="_blank">Stefan Koshy</a></p>
 					<p>Wallpapers from <a href="http://unsplash.com" target="_blank">Unsplash</a></p>
 					<p>Weather data from <a href="http://openweathermap.org" target="_blank">Open Weather Map</a></p>
+					<p>Weather forecast from <a href="http://forecast.io" target="_blank">Forecast.io</a></p>
 				</div>
 			</div>
 		</div>
