Icon editing support

--- a/newtab.html
+++ b/newtab.html
@@ -42,6 +42,10 @@
 				<input type="text" class="bookmark_name" placeholder="Name (Google)"/>
 				<input type="text" class="bookmark_link" placeholder="URL (http://google.com)"/>
 				<input type="text" class="bookmark_color" placeholder="Color" readonly/>
+				<input type="text" class="bookmark_icon" placeholder="Icon URL" list="bookmark_icon_picker">
+				<datalist id="bookmark_icon_picker" class="bookmark_icon_picker">
+					<option value=""></option>
+				</datalist>
 				<div class="buttons_container">
 					<button class="bookmarks_button_save">Save</button>
 					<button class="bookmarks_button_cancel">Cancel</button>
