Fixes for Icon support

--- a/newtab.html
+++ b/newtab.html
@@ -39,10 +39,10 @@
 
 			</div>
 			<div class="bookmarks_editor">
-				<input type="text" class="bookmark_name" placeholder="Name (Google)"/>
-				<input type="text" class="bookmark_link" placeholder="URL (http://google.com)"/>
-				<input type="text" class="bookmark_color" placeholder="Color" readonly/>
-				<input type="text" class="bookmark_icon" placeholder="Icon URL" list="bookmark_icon_picker">
+				<input type="text" class="prefs_row bookmark_name" placeholder="Name (Google)"/>
+				<input type="text" class="prefs_row bookmark_link" placeholder="URL (http://google.com)"/>
+				<input type="text" class="prefs_row bookmark_color" placeholder="Color" readonly/>
+				<input type="text" class="prefs_row bookmark_icon" placeholder="Icon URL (Click dropdown for options)" list="bookmark_icon_picker">
 				<datalist id="bookmark_icon_picker" class="bookmark_icon_picker">
 					<option value=""></option>
 				</datalist>
