Fix wallpaper so it uses my collection. Also, adds upgrade support and rename various icons

--- a/newtab.html
+++ b/newtab.html
@@ -13,6 +13,7 @@
 	<script src="js/static.js" type="text/javascript"></script>
 	<script src="js/utils.js" type="text/javascript"></script>
 	<script src="js/main.js" type="text/javascript"></script>
+	<script src="js/upgrade.js" type="text/javascript"></script>
 	<script src="lib/iconwc.js" type="text/javascript"></script>
 	<script src="lib/jqColorPicker.min.js" type="text/javascript"></script>
 
