--- a/newtab.html
+++ b/newtab.html
@@ -27,7 +27,7 @@
 	</div>
 	<div class="centered_box" style="display: none;">
 		<div class="inner">
-			<div class="time"></div>
+			<div class="time">&nbsp;</div>
 			<div class="welcome_box">
 				<span class="welcome_text"></span> 
 				<span contentEditable data-content-type="name" class="name selectable"></span>
