--- a/newtab.html
+++ b/newtab.html
@@ -6,6 +6,7 @@
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment.min.js" crossorigin="anonymous"></script>
+	<script src="lib/jquery.unveil.js" type="text/javascript"></script>
 
 	<link rel="stylesheet" type="text/css" href="
 	https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" media="screen" />
